updated people with the swipe

--- a/OracleJETApplication-V-2/views/partials/employee-search/employee-search-large.html
+++ b/OracleJETApplication-V-2/views/partials/employee-search/employee-search-large.html
@@ -232,7 +232,7 @@
                     scrollPolicyOptions: {fetchSize: 5}}">
             </ul>
             <div data-bind="ojComponent: {component: 'ojPagingControl',
-            data: listViewDataSource, pageSize:5}" class="float-r"></div>
+            data: listViewDataSource, pageSize:PageControllVal}" class="float-r"></div>
 
             <script type="text/html" id="peoplelist_template">
                 <li data-bind="attr: {id: $data['name']}" class="item-marker">
