updates from ramu

--- a/OracleJETApplication-V-2/views/labor-management/dialogwindow/schedule-dailogwindow-small.html
+++ b/OracleJETApplication-V-2/views/labor-management/dialogwindow/schedule-dailogwindow-small.html
@@ -128,9 +128,9 @@
                                  </div>
                              </div>
                              
-                              <div data-bind="foreach: locations">
+                              
                                 <div style="border: 1px solid #000000; background-color: white; margin-top: 5px; color: black;  text-align: center;" 
-                                     data-bind="visible: (location.toLowerCase() === $root.activeLocation().toString().toLowerCase())">
+                                     >
                                      <div data-bind="foreach: openingshift;">
                                         <div style="border: 1px solid #000000; background-color: white; color: black;  text-align: center;">
                                             <strong><span >OPENING SHIFT</span></strong>
@@ -232,7 +232,7 @@
                                     </div>    
                                 </div>
                                   
-                              </div>  
+                              
                          </div>
                      </div>
                           <!-- /ko -->   
@@ -1002,6 +1002,6 @@
      </div><!-- end of location -->
      
      <div class="oj-flex" data-bind="visible: ($parent.selectedTab() === 'Revenue')">
-         <h1><span style="color: #000000">Content for Revenue Center Here</span></h1>
+         <h1><span style="color: #000000">Content for Revenue Center Here 123</span></h1>
      </div>
 </div>
