--- a/OracleJETApplication-V-2/views/partials/employee-hire-status-modal/employee-hire-status-modal-small.html
+++ b/OracleJETApplication-V-2/views/partials/employee-hire-status-modal/employee-hire-status-modal-small.html
@@ -8,14 +8,15 @@
      </div>
 <div class="oj-dialog-body">
         <div id="tabs-container">
-            <div id="tabs" data-bind="ojComponent:{component: 'ojTabs', disabledTabs: [3]}">
+            <div id="tabs" data-bind="ojComponent:{component: 'ojTabs', optionChange: tabsChangeHandler,
+                    disabledTabs: [3]}">
                 <!-- tab bar -->
                 <ul>
-                    <li><span>Hired</span></li>
-                    <li><span>Terminated</span></li>
-                    <li><span>Leave of Absence</span></li>
+                    <li id="t1"><span>Hired</span></li>
+                    <li id="t2"><span>Terminated</span></li>
+                    <li id="t3"><span>Leave of Absence</span></li>
                 </ul>
-                <div id="tabs-1">
+                <div id="tabs-1" style="background: #eaeded">
                     <div class="oj-row">
                         <div class="oj-col oj-sm-12">
                             <div>Hire Date</div>
@@ -42,11 +43,88 @@
                         </div>
                     </div>
                 </div>
-                <div id="tabs-2">
-                    <p>Terminated Tab</p>
+                <div id="tabs-2" style="background: #eaeded">
+                    <div class="oj-row">
+                        <div class="oj-col oj-sm-12">
+                            <div>Termination Date</div>
+                            <input data-bind="ojComponent: {component: 'ojInputDate', 
+                                    value: terminationdate
+                                }" />
+                            <div>Eligibale for Rehire ?</div>
+                            <input id="giftWrapSwitch" data-bind="ojComponent: {component: 'ojSwitch', 
+				value: true
+                            }" title="Eligibale for Rehire ?"/>
+			
+		
+                        </div>
+                        
+                        <div class="oj-col oj-sm-12">
+                            <div>Termination Status</div>
+                            <select id="basicSelect" data-bind="ojComponent: {component: 'ojSelect',
+                                                    value: termstatusvalue,
+                                                    rootAttributes: {style:'max-width:20em'}}">
+                                <option value="VA">A</option>
+                                <option value="SI">B</option>
+                                <option value="CA">C</option>
+                                <option value="OU">D</option>
+                             </select>
+                        </div>
+                        <div class="oj-col oj-sm-12">
+                            <div>Termination Reason</div>
+                            <select id="basicSelect" data-bind="ojComponent: {component: 'ojSelect',
+                                                    value: termsreasonvalue1,
+                                                    rootAttributes: {style:'max-width:20em'}}">
+    <option value="VA">A</option>
+    <option value="SI">B</option>
+    <option value="CA">C</option>
+    <option value="OU">D</option>
+  </select>
+                            <a href="#">+ add another</a>
+                        </div>
+                         <div class="oj-col oj-sm-12">
+                            <label for="text-area">Termination Notes</label>
+                            <textarea id="text-area" 
+                                      data-bind="ojComponent: {component: 'ojTextArea', 
+                                                               value: terminotes}"></textarea>
+
+                           
+                        </div>
+                    </div>
                 </div>
-                <div id="tabs-3">
-                    <p>Leave of Absence Tab</p>
+                <div id="tabs-3" style="background: #eaeded">
+                    <div class="oj-row">
+                        <div class="oj-col oj-sm-12">
+                            <div>Effective Dates</div>
+                            <label for="text-area">Start*</label>
+                            <input data-bind="ojComponent: {component: 'ojInputDate', 
+                                    value: leavestartdate
+                                }" />
+                            <label for="text-area">End*</label>
+                            <input data-bind="ojComponent: {component: 'ojInputDate', 
+                                    value: leaveenddate
+                        }" />
+                           
+                        </div>
+                        <div class="oj-col oj-sm-12">
+                            <label for="text-area">Notes</label>
+                            <textarea id="text-area" 
+                                      data-bind="ojComponent: {component: 'ojTextArea', 
+                                                               value: leavenotes}"></textarea>
+
+                           
+                        </div>
+                        <div class="oj-col oj-sm-12">
+                            <div>Reason</div>
+                            <select id="basicSelect" data-bind="ojComponent: {component: 'ojSelect',
+                                                    value: reasonvalue,
+                                                    rootAttributes: {style:'max-width:20em'}}">
+    <option value="VA">Vacation</option>
+    <option value="SI">Sick</option>
+    <option value="CA">Casual</option>
+    <option value="OU">Out of town</option>
+  </select>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
