--- a/OracleJETApplication-V-2/views/labor-management/schedules-timecards/schedules-timecards-large.html
+++ b/OracleJETApplication-V-2/views/labor-management/schedules-timecards/schedules-timecards-large.html
@@ -106,7 +106,9 @@
      <div class="oj-flex" data-bind="visible: ($parent.selectedTab() === 'Job')">
          
          <!--  ko foreach: $parent.jobTabContent -->
-         <div class="oj-lg-12 oj-md-12 oj-flex-item" style="margin-left: 20px; margin-right: 20px">
+         <div class="oj-lg-12 oj-md-12 oj-flex-item" style="margin-left: 10px; margin-right: 10px"
+               data-bind="visible: (joblocation.toLowerCase() === $root.activeLocation().toString().toLowerCase())">
+             
              <div id="accordionPage" data-bind="ojComponent: {component: 'ojAccordion'}" >
                  <div id="c1" >
                     <div>
@@ -114,10 +116,10 @@
                         <span style="color: #000000; width: 100%" data-bind="text: jobtitle" > </span>
                     </div>
                      <div ><!-- child content -->
-                         <div class="oj-flex" style="background-color: #E6E6E6; margin: 10px">
+                         <div class="oj-flex" style="background-color: #E6E6E6; margin: 5px">
                   <!--  ko foreach: days -->
                      
-                     <div class="oj-flex-item" style="margin: 5px">
+                     <div class="oj-flex-item" style="margin: 2px">
                          <div>
                         <div style="color: black;  text-align: center;">
                             <span data-bind="text: startdate"></span> 
@@ -137,9 +139,9 @@
                                  </div>
                              </div>
                              
-                              <div data-bind="foreach: locations">
-                                <div style="border: 1px solid #000000; background-color: white; margin-top: 5px; color: black;  text-align: center;" 
-                                     data-bind="visible: (location.toLowerCase() === $root.activeLocation().toString().toLowerCase())">
+                              
+                                <div style="border: 1px solid #000000; background-color: white; margin-top: 5px; 
+                                     color: black;  text-align: center;">
                                      <div data-bind="foreach: openingshift;">
                                         <div style="border: 1px solid #000000; background-color: white; color: black;  text-align: center;">
                                             <strong><span >OPENING SHIFT</span></strong>
@@ -241,7 +243,7 @@
                                     </div>    
                                 </div>
                                   
-                              </div>  
+                              
                          </div>
                      </div>
                           <!-- /ko -->   
@@ -576,7 +578,7 @@
      
      <div class="oj-flex" data-bind="visible: ($parent.selectedTab() === 'Station')">
          <!--  ko foreach: $parent.stationTabContent -->
-         <div class="oj-lg-12 oj-md-12 oj-flex-item" style="margin-left: 20px; margin-right: 20px">
+         <div class="oj-lg-12 oj-md-12 oj-flex-item" style="margin-left: 10px; margin-right: 10px">
              <div id="accordionPage" data-bind="ojComponent: {component: 'ojAccordion'}" >
                  <div id="c1" >
             <div  style="color: #000000; width: 100%">
@@ -590,7 +592,7 @@
                 <div class="oj-flex" style="background-color: #E6E6E6; margin: 10px">
                   <!--  ko foreach: jobcontent -->
                      
-                     <div class="oj-flex-item" style="margin: 5px">
+                     <div class="oj-flex-item" style="margin: 2px">
                          <div>
                         <div style="color: black;  text-align: center;">
                             <span data-bind="text: startdate"></span> 
@@ -788,7 +790,7 @@
          <!-- /ko -->
      </div>
      
-     <div class="oj-flex" style="margin-left: 20px; margin-right: 20px;" data-bind="visible: ($parent.selectedTab() === 'Location')">
+     <div class="oj-flex" style="margin-left: 10px; margin-right: 10px;" data-bind="visible: ($parent.selectedTab() === 'Location')">
          <div class="oj-flex oj-lg-12 oj-md-12" style="margin-bottom: 2px;">  
          <div class="oj-md-4 oj-lg-3 oj-flex-item currentWeekHeader" style="background-color: #000000; margin-right: 5px ">
                 <div style="color: #ffffff">WEEKLY TOTALS</div>
@@ -818,7 +820,7 @@
                        <br /><span style="float: " data-bind="text: '$'+totaltipsamount;"></span>
                         </div>
                     </div>
-                      <div style="background-color: #E6E6E6; margin: 5px">
+                      <div style="background-color: #E6E6E6; margin: 2px">
                   <!--  ko foreach: locations -->
                      
                      <div style="margin: 5px" 
