--- a/OracleJETApplication-V-2/views/partials/employee-search/employee-search-large.html
+++ b/OracleJETApplication-V-2/views/partials/employee-search/employee-search-large.html
@@ -261,7 +261,7 @@
                                     <div class="hireDateListview" data-bind="text: $parent.getBasicFormattedDate(hireDate)"></div>
                                 </div>
                                 <div class="oj-lg-2 oj-md-2 oj-flex-item">
-                                    <div class="employeeStatusListView" data-bind="css:{empStatusInactive: status == 'Inactive-Terminated', empStatusActive: status == 'Active'}"><span data-bind="css:{'fa-times-circle': status == 'Inactive-Terminated', 'fa-check-circle': status == 'Active'}"></span> <span data-bind="text: status"></span></div>
+                                    <div class="employeeStatusListView" data-bind="css:{empStatusInactive: status == 'Inactive-Terminated', empStatusActive: status == 'Active'}, click: $parent.empHireStatusOpen"><span data-bind="css:{'fa-times-circle': status == 'Inactive-Terminated', 'fa-check-circle': status == 'Active'}"></span> <span data-bind="text: status"></span></div>
                                 </div>
                             </div>
 
