--- a/OracleJETApplication-V-2/views/labor-management/schedules-timecards/schedules-timecards-large.html
+++ b/OracleJETApplication-V-2/views/labor-management/schedules-timecards/schedules-timecards-large.html
@@ -428,7 +428,7 @@
                                                 <div data-bind="foreach: employees;" style="margin-top: 5px">
                                                     <img data-bind="attr: {src: 'css/images/people/'+empid+'.png'};" 
                                              style="height: 20px; width: 30px;"/>
-                                                    <a href="#" data-bind="click: $parent.empBasicInfoOpen"> <strong><span data-bind="text: empname"></span></strong></a>
+                                                    <a href="#" data-bind="click: $parents[6].empScheduleDetailInfoOpen"> <strong><span data-bind="text: empname"></span></strong></a>
                                                     <br /><span data-bind="text: timings"></span>
                                                     <br /><span data-bind="text: hours +' hours | $'+hourlywage"></span><br />
                                                 </div>
@@ -447,7 +447,7 @@
                                                 <div data-bind="foreach: employees;" style="margin-top: 5px">
                                                     <img data-bind="attr: {src: 'css/images/people/'+empid+'.png'};" 
                                              style="height: 20px; width: 30px;"/>
-                                                    <a href="#" data-bind="click: $parent.empBasicInfoOpen"> <strong><span data-bind="text: empname"></span></strong></a>
+                                                    <a href="#" data-bind="click: $parents[6].empScheduleDetailInfoOpen"> <strong><span data-bind="text: empname"></span></strong></a>
                                                     
                                                     <br /><span data-bind="text: timings"></span>
                                                     <br /><span data-bind="text: hours +' hours | $'+hourlywage"></span><br />
@@ -467,7 +467,7 @@
                                                 <div data-bind="foreach: employees;" style="margin-top: 5px">
                                                     <img data-bind="attr: {src: 'css/images/people/'+empid+'.png'};" 
                                              style="height: 20px; width: 30px;"/>
-                                                    <a href="#" data-bind="click: $parent.empBasicInfoOpen"> <strong><span data-bind="text: empname"></span></strong></a>
+                                                    <a href="#" data-bind="click: $parents[6].empScheduleDetailInfoOpen"> <strong><span data-bind="text: empname"></span></strong></a>
                                                     
                                                     <br /><span data-bind="text: timings"></span>
                                                     <br /><span data-bind="text: hours +' hours | $'+hourlywage"></span><br />
@@ -487,7 +487,7 @@
                                                 <div data-bind="foreach: employees;" style="margin-top: 5px">
                                                     <img data-bind="attr: {src: 'css/images/people/'+empid+'.png'};" 
                                              style="height: 20px; width: 30px;"/>
-                                                    <a href="#" data-bind="click: $parent.empBasicInfoOpen"> <strong><span data-bind="text: empname"></span></strong></a>
+                                                    <a href="#" data-bind="click: $parents[6].empScheduleDetailInfoOpen"> <strong><span data-bind="text: empname"></span></strong></a>
                                                     
                                                     <br /><span data-bind="text: timings"></span>
                                                     <br /><span data-bind="text: hours +' hours | $'+hourlywage"></span><br />
@@ -507,7 +507,7 @@
                                                 <div data-bind="foreach: employees;" style="margin-top: 5px">
                                                     <img data-bind="attr: {src: 'css/images/people/'+empid+'.png'};" 
                                              style="height: 20px; width: 30px;"/>
-                                                    <a href="#" data-bind="click: $parent.empBasicInfoOpen"> <strong><span data-bind="text: empname"></span></strong></a>
+                                                    <a href="#" data-bind="click: $parents[6].empScheduleDetailInfoOpen"> <strong><span data-bind="text: empname"></span></strong></a>
                                                     
                                                     <br /><span data-bind="text: timings"></span>
                                                     <br /><span data-bind="text: hours +' hours | $'+hourlywage"></span><br />
@@ -1035,4 +1035,4 @@
     </div>
 </div>
 <!--home dialog modal-->
-<div data-bind="template: {name: 'labor-management/dialogwindow/schedule-dailogwindow-large'}"></div>
+<div data-bind="template: {name: 'labor-management/dialogwindow/shift-detail-dialogwindow-large'}"></div>
