--- a/OracleJETApplication-V-2/views/labor-management/schedules-timecards/schedules-timecards-small.html
+++ b/OracleJETApplication-V-2/views/labor-management/schedules-timecards/schedules-timecards-small.html
@@ -452,7 +452,7 @@
                                                 <div data-bind="foreach: employees;" style="margin-top: 5px">
                                                     <img data-bind="attr: {src: 'css/images/people/'+empid+'.png'};" 
                                              style="height: 20px; width: 30px;"/>
-                                                    <a href="#" data-bind="click: $parent.empBasicInfoOpen"> <strong><span data-bind="text: empname"></span></strong></a>
+                                                    <a href="#" data-bind="click: $parents[6].empScheduleDetailInfoOpen"> <strong><span data-bind="text: empname"></span></strong></a>
                                                     <br /><span data-bind="text: timings"></span>
                                                     <br /><span data-bind="text: hours +' hours | $'+hourlywage"></span><br />
                                                 </div>
@@ -473,7 +473,7 @@
                                                 <div data-bind="foreach: employees;" style="margin-top: 5px">
                                                     <img data-bind="attr: {src: 'css/images/people/'+empid+'.png'};" 
                                              style="height: 20px; width: 30px;"/>
-                                                    <a href="#" data-bind="click: $parent.empBasicInfoOpen"> <strong><span data-bind="text: empname"></span></strong></a>
+                                                    <a href="#" data-bind="click: $parents[6].empScheduleDetailInfoOpen"> <strong><span data-bind="text: empname"></span></strong></a>
                                                     
                                                     <br /><span data-bind="text: timings"></span>
                                                     <br /><span data-bind="text: hours +' hours | $'+hourlywage"></span><br />
@@ -495,7 +495,7 @@
                                                 <div data-bind="foreach: employees;" style="margin-top: 5px">
                                                     <img data-bind="attr: {src: 'css/images/people/'+empid+'.png'};" 
                                              style="height: 20px; width: 30px;"/>
-                                                    <a href="#" data-bind="click: $parent.empBasicInfoOpen"> <strong><span data-bind="text: empname"></span></strong></a>
+                                                    <a href="#" data-bind="click: $parents[6].empScheduleDetailInfoOpen"> <strong><span data-bind="text: empname"></span></strong></a>
                                                     
                                                     <br /><span data-bind="text: timings"></span>
                                                     <br /><span data-bind="text: hours +' hours | $'+hourlywage"></span><br />
@@ -517,7 +517,7 @@
                                                 <div data-bind="foreach: employees;" style="margin-top: 5px">
                                                     <img data-bind="attr: {src: 'css/images/people/'+empid+'.png'};" 
                                              style="height: 20px; width: 30px;"/>
-                                                    <a href="#" data-bind="click: $parent.empBasicInfoOpen"> <strong><span data-bind="text: empname"></span></strong></a>
+                                                    <a href="#" data-bind="click: $parents[6].empScheduleDetailInfoOpen"> <strong><span data-bind="text: empname"></span></strong></a>
                                                     
                                                     <br /><span data-bind="text: timings"></span>
                                                     <br /><span data-bind="text: hours +' hours | $'+hourlywage"></span><br />
@@ -539,7 +539,7 @@
                                                 <div data-bind="foreach: employees;" style="margin-top: 5px">
                                                     <img data-bind="attr: {src: 'css/images/people/'+empid+'.png'};" 
                                              style="height: 20px; width: 30px;"/>
-                                                    <a href="#" data-bind="click: $parent.empBasicInfoOpen"> <strong><span data-bind="text: empname"></span></strong></a>
+                                                    <a href="#" data-bind="click: $parents[6].empScheduleDetailInfoOpen"> <strong><span data-bind="text: empname"></span></strong></a>
                                                     
                                                     <br /><span data-bind="text: timings"></span>
                                                     <br /><span data-bind="text: hours +' hours | $'+hourlywage"></span><br />
@@ -905,7 +905,7 @@
                                                     <br /><span data-bind="text: hours +' hours | $'+hourlywage"></span><br />
                                                     <img data-bind="attr: {src: 'css/images/people/'+empid+'.png'};" 
                                              style="height: 20px; width: 30px;"/>
-                                                    <a href="#" data-bind="click: $parent.empBasicInfoOpen"> <strong><span data-bind="text: empname"></span></strong></a>
+                                                    <a href="#" data-bind="click: $parents[6].empScheduleDetailInfoOpen"> <strong><span data-bind="text: empname"></span></strong></a>
                                                     <br /><span data-bind="text: timings"></span>
                                                     
                                                      </div>
@@ -936,7 +936,7 @@
                                                     <br /><span data-bind="text: hours +' hours | $'+hourlywage"></span><br />
                                                     <img data-bind="attr: {src: 'css/images/people/'+empid+'.png'};" 
                                              style="height: 20px; width: 30px;"/>
-                                                    <a href="#" data-bind="click: $parent.empBasicInfoOpen"> <strong><span data-bind="text: empname"></span></strong></a>
+                                                    <a href="#" data-bind="click: $parents[6].empScheduleDetailInfoOpen"> <strong><span data-bind="text: empname"></span></strong></a>
                                                     <br /><span data-bind="text: timings"></span>
                                                     
                                                      </div>
@@ -966,7 +966,7 @@
                                                     <br /><span data-bind="text: hours +' hours | $'+hourlywage"></span><br />
                                                     <img data-bind="attr: {src: 'css/images/people/'+empid+'.png'};" 
                                              style="height: 20px; width: 30px;"/>
-                                                    <a href="#" data-bind="click: $parent.empBasicInfoOpen"> <strong><span data-bind="text: empname"></span></strong></a>
+                                                    <a href="#" data-bind="click: $parents[6].empScheduleDetailInfoOpen"> <strong><span data-bind="text: empname"></span></strong></a>
                                                     <br /><span data-bind="text: timings"></span>
                                                     
                                                      </div>
@@ -996,7 +996,7 @@
                                                     <br /><span data-bind="text: hours +' hours | $'+hourlywage"></span><br />
                                                     <img data-bind="attr: {src: 'css/images/people/'+empid+'.png'};" 
                                              style="height: 20px; width: 30px;"/>
-                                                    <a href="#" data-bind="click: $parent.empBasicInfoOpen"> <strong><span data-bind="text: empname"></span></strong></a>
+                                                    <a href="#" data-bind="click: $parents[6].empScheduleDetailInfoOpen"> <strong><span data-bind="text: empname"></span></strong></a>
                                                     <br /><span data-bind="text: timings"></span>
                                                     
                                                      </div>
@@ -1026,7 +1026,7 @@
                                                     <br /><span data-bind="text: hours +' hours | $'+hourlywage"></span><br />
                                                     <img data-bind="attr: {src: 'css/images/people/'+empid+'.png'};" 
                                              style="height: 20px; width: 30px;"/>
-                                                    <a href="#" data-bind="click: $parent.empBasicInfoOpen"> <strong><span data-bind="text: empname"></span></strong></a>
+                                                    <a href="#" data-bind="click: $parents[6].empScheduleDetailInfoOpen"> <strong><span data-bind="text: empname"></span></strong></a>
                                                     <br /><span data-bind="text: timings"></span>
                                                     
                                                      </div>
